AHRS and Barometer protocols

--- a/Example/iADSB/Info.plist
+++ b/Example/iADSB/Info.plist
@@ -43,5 +43,20 @@
 	<string>Let&apos;s test the GPS!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Let&apos;s test the GPS!</string>
+	<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+			<key>NSExceptionDomains</key>
+			<dict>
+			<key>example.com</key>
+			<dict>
+			<key>NSExceptionAllowsInsecureHTTPLoads</key>
+			<true/>
+			<key>NSIncludesSubdomains</key>
+			<true/>
+		</dict>
+    </dict>
+</dict>
 </dict>
 </plist>
