--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ use_frameworks!
 
 target 'iADSB_Example' do
   pod 'iADSB', :path => '../'
+  pod 'ObjectiveWMM', git: 'git@github.com:ckhsponge/ObjectiveWMM.git', branch: 'ckhsponge/cocoapod'
 
   target 'iADSB_Tests' do
     inherit! :search_paths
