--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,8 @@
 use_frameworks!
 
 target 'iADSB_Example' do
+  platform :ios, '10.0'
+  
   pod 'iADSB', :path => '../'
   pod 'ObjectiveWMM', git: 'git@github.com:ckhsponge/ObjectiveWMM.git', branch: 'ckhsponge/cocoapod'
   pod 'Starscream', '~> 3.0.2'
